--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "cordova-android": "^6.3.0",
     "cordova-browser": "^5.0.3",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-canvas2image": "git+https://github.com/devgeeks/Canvas2ImagePlugin.git",
     "cordova-plugin-dialogs": "^2.0.1",
-    "cordova-plugin-whitelist": "^1.3.3"
+    "cordova-plugin-whitelist": "^1.3.3",
+    "org.devgeeks.Canvas2ImagePlugin": "https://github.com/devgeeks/Canvas2ImagePlugin.git"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "org.devgeeks.Canvas2ImagePlugin": {}
     },
     "platforms": [
       "ios",
