--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -6,6 +6,12 @@
   "version": "com.example.meme",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "author": "Apache Cordova Team",
-  "icons": [],
+  "icons": [
+    {
+      "src": "res/icon/MILA_KUNIS.png",
+      "type": "image/png",
+      "sizes": "undefinedxundefined"
+    }
+  ],
   "start_url": "index.html"
 }
