--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
       "cordova-plugin-network-information": {}
     },
     "platforms": [
-      "ios",
+      "browser",
       "android",
-      "browser"
+      "ios"
     ]
   }
 }
