--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -170,6 +170,8 @@ android {
     defaultConfig {
         versionCode cdvVersionCode ?: new BigInteger("" + privateHelpers.extractIntFromManifest("versionCode"))
         applicationId privateHelpers.extractStringFromManifest("package")
+        minSdkVersion 16
+        targetSdkVersion 26
 
         if (cdvMinSdkVersion != null) {
             minSdkVersion cdvMinSdkVersion
