--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -8,7 +8,7 @@
   "author": "Apache Cordova Team",
   "icons": [
     {
-      "src": "res/icon/MILA_KUNIS.png",
+      "src": "res/icon/ico.png",
       "type": "image/png",
       "sizes": "undefinedxundefined"
     }
